@@ -180,26 +180,27 @@
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0x9d
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0x9e
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0x9f
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xa0
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xa1
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xa2
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xa3
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xa4
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xa5
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xa6
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xa7
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xa8
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xa9
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xaa
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xab
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xac
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xad
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xae
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xaf
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xb0
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xb1
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xb2
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xb3
+	//	Here, Exult supports SI intrinsics for users of UCC.
+	USECODE_INTRINSIC_PTR(approach_avatar),	// 0xa0
+	USECODE_INTRINSIC_PTR(get_attack_mode),	// 0xa1
+	USECODE_INTRINSIC_PTR(error_message),	// 0xa2
+	USECODE_INTRINSIC_PTR(get_body_npc),	// 0xa3
+	USECODE_INTRINSIC_PTR(get_npc_id),	// 0xa4
+	USECODE_INTRINSIC_PTR(set_npc_id),	// 0xa5
+	USECODE_INTRINSIC_PTR(get_oppressor),	// 0xa6
+	USECODE_INTRINSIC_PTR(get_readied),	// 0xa7
+	USECODE_INTRINSIC_PTR(get_weapon),	// 0xa8
+	USECODE_INTRINSIC_PTR(modify_schedule),	// 0xa9
+	USECODE_INTRINSIC_PTR(printf),		// 0xaa
+	USECODE_INTRINSIC_PTR(remove_cont_items),// 0xab
+	USECODE_INTRINSIC_PTR(remove_from_area),// 0xac
+	USECODE_INTRINSIC_PTR(revert_schedule),	// 0xad
+	USECODE_INTRINSIC_PTR(run_schedule),	// 0xae
+	USECODE_INTRINSIC_PTR(set_barge_dir),	// 0xaf
+	USECODE_INTRINSIC_PTR(set_intercept_item),	// 0xb0
+	USECODE_INTRINSIC_PTR(set_new_schedules),	// 0xb1
+	USECODE_INTRINSIC_PTR(set_oppressor),	// 0xb2
+	USECODE_INTRINSIC_PTR(si_path_run_usecode),	// 0xb3
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xb4
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xb5
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xb6
