@@ -243,7 +243,6 @@
 	USECODE_INTRINSIC_PTR(fade_palette),			// 0xa8
 	// This one is used just for sleeping:
 	USECODE_INTRINSIC_PTR(fade_palette),			// 0xa9
-//	USECODE_INTRINSIC_PTR(get_party_ids),			// 0xaa
 	USECODE_INTRINSIC_PTR(get_party_list2),			// 0xaa
 
 	USECODE_INTRINSIC_PTR(in_combat),			// 0xab
@@ -266,7 +265,6 @@
 	USECODE_INTRINSIC_PTR(get_npc_id),			// 0xbc - Known
 	USECODE_INTRINSIC_PTR(set_npc_id),			// 0xbd - Known
 	USECODE_INTRINSIC_PTR(get_readied),	// Guess	// 0xbe
-//	USECODE_INTRINSIC_PTR(add_removed_npc),			// 0xbf
 	USECODE_INTRINSIC_PTR(approach_avatar),			// 0xbf
 	USECODE_INTRINSIC_PTR(set_barge_dir),			// 0xc0
 	USECODE_INTRINSIC_PTR(si_path_run_usecode),		// 0xc1
